<resources>
    <string name="app_name">android_challenge_01_clean</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="search_01">search..</string>
    <string name="tweets_detail">Tweets Detail</string>
    <string name="text_tweets">Text tweets:</string>
    <string name="location">Location:</string>
    <string name="id">id:</string>
    <string name="title_activity_maps_test">MapsActivityTest</string>
    <string name="set_time">Set time</string>
    <string name="setup">Setup</string>
    <string name="cancel">Cancel</string>
    <string name="text_dialog_set_lifespan">With this value you can set the duration of the pins on the map, until they are replaced by a new one.\n\nSet a time in seconds for example 60s.</string>
    <string name="set_lifespan">Set lifespan</string>
    <string name="messege_field_empty">the field is empty</string>
</resources>